# qiyva-writer

./: .gitignore  BRIEFING_image_textwrap.md  CMakeLists.txt  LICENSE  README.md
cmake/: Hunspell.cmake
docs/: CNAME  about.html  index.html  philosophy.html
installer/: mira-writing.iss
resources/: flags.qrc  geo.qrc  icons.qrc
src/: AboutDialog.cpp  BackgroundWidget.cpp  BackgroundWidget.h  CardItem.cpp  CardItem.h  CharacterSheetPanel.cpp  ConstrutorMentionAddPopup.cpp  ConstrutorMentionAddPopup.h  ConstrutorStore.cpp  ConstrutorStore.h  ConstrutorWindow.cpp  ConstrutorWindow.h  DialogueDetector.cpp  DialogueVerbsEN.h  DialogueVerbsES.h  DocCache.cpp  DocCache.h  DrawerListPanel.cpp  DrawerListPanel.h  EditorHost.cpp  EditorHost.h  ElementCreateDialog.cpp  ElementCreateDialog.h  ElementsStore.cpp  ElementsStore.h  Exporter.cpp  FontPickerPopup.cpp  FontPickerPopup.h  GeoData.cpp  GeoData.h  GlobalSearchPanel.cpp  GroupsPanel.cpp  GroupsPanel.h  HelpPanel.cpp  HelpPanel.h  IconUtils.cpp  IconUtils.h  ImageInsertDialog.cpp  ImageInsertDialog.h  ImageOverlay.cpp  (+98 more)
src/assets/fonts/Bilbo_Swash_Caps/: OFL.txt
src/assets/geo/: countries_info.tsv
translations/: mira_en.ts  qenna_en.ts  qenna_es.ts  qenna_pt_BR.ts
